--- a/storeObject.html
+++ b/storeObject.html
@@ -1,23 +1,66 @@
+
 <!DOCTYPE html>
 <html>
      <head>
+          <link rel="shortcut icon" href="#">
           <style>
-               h1{
+               h1 {
                     text-align: center;
                     border: solid 3px grey;
                }
           </style>
      </head>
      <body>
-          <h1>Store object in local storage using javascript</h1>
+          <h1>Store multiple users in local storage using JavaScript</h1>
+          <form id="myForm" autocomplete="off">
+               <label for="name">Name:</label>
+               <input type="text" id="name" name="name" required>
+               <label for="age">Age:</label>
+               <input type="number" id="age" age="age" required>
+               <label for="city">City:</label>
+               <input type="text" id="city" name="city" required>
+               <button type="submit">Submit</button>
+          </form>
           <script>
-          const myObj={
-               name:'Prathamesh',
-               age:22
-          }
-          var myObjString = JSON.stringify(myObj);
-          console.log(myObjString);
-          localStorage.setItem('myObject',myObjString);
+const formName = document.getElementById('myForm'); // Replace 'yourFormId' with the actual ID of your form
+
+formName.addEventListener('submit', addUsers);
+
+function addUsers(event) {
+    event.preventDefault(); // Prevent the default form submission behavior
+
+    // Access form elements to get user details
+    const userName = event.target.elements.name.value;
+    const userAge = event.target.elements.age.value;
+    const userCity = event.target.elements.city.value;
+
+    // Create an object to store user details
+    const newUser = {
+        name: userName,
+        age: userAge,
+        city: userCity
+    };
+
+    // Retrieve existing user data from local storage
+    const existingUserDataString = localStorage.getItem('userList');
+
+    // Parse existing user data or initialize an empty array
+    const existingUserData = existingUserDataString ? JSON.parse(existingUserDataString) : [];
+
+    // Add the new user to the array
+    existingUserData.push(newUser);
+
+    // Convert the array to a string and store it in local storage
+    localStorage.setItem('userList', JSON.stringify(existingUserData));
+
+    // Optionally, you can display a message or perform other actions after storing the user
+    alert('User details stored successfully!');
+
+    // Clear the form or perform any other necessary actions
+    formName.reset();
+}
+
+
           
           </script>
      </body>
