--- a/storeObject.html
+++ b/storeObject.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
      <head>
@@ -8,60 +7,91 @@
                     text-align: center;
                     border: solid 3px grey;
                }
+               #userDetails {
+                    margin-top: 20px;
+               }
+               .userContainer {
+                    margin-bottom: 10px;
+               }
           </style>
      </head>
      <body>
-          <h1>Store multiple users in local storage using JavaScript</h1>
+          <h1>Store, Display, and Delete User Details</h1>
           <form id="myForm" autocomplete="off">
                <label for="name">Name:</label>
                <input type="text" id="name" name="name" required>
                <label for="age">Age:</label>
-               <input type="number" id="age" age="age" required>
+               <input type="number" id="age" name="age" required>
                <label for="city">City:</label>
                <input type="text" id="city" name="city" required>
                <button type="submit">Submit</button>
           </form>
+          <div id="userDetails"></div>
+
           <script>
-const formName = document.getElementById('myForm'); // Replace 'yourFormId' with the actual ID of your form
+               const formName = document.getElementById('myForm');
+               const userDetailsContainer = document.getElementById('userDetails');
 
-formName.addEventListener('submit', addUsers);
+               formName.addEventListener('submit', addUsers);
 
-function addUsers(event) {
-    event.preventDefault(); // Prevent the default form submission behavior
+               function addUsers(event) {
+                    event.preventDefault();
 
-    // Access form elements to get user details
-    const userName = event.target.elements.name.value;
-    const userAge = event.target.elements.age.value;
-    const userCity = event.target.elements.city.value;
+                    const userName = event.target.elements.name.value;
+                    const userAge = event.target.elements.age.value;
+                    const userCity = event.target.elements.city.value;
 
-    // Create an object to store user details
-    const newUser = {
-        name: userName,
-        age: userAge,
-        city: userCity
-    };
+                    const newUser = {
+                         name: userName,
+                         age: userAge,
+                         city: userCity
+                    };
 
-    // Retrieve existing user data from local storage
-    const existingUserDataString = localStorage.getItem('userList');
+                    const existingUserDataString = localStorage.getItem('userList');
 
-    // Parse existing user data or initialize an empty array
-    const existingUserData = existingUserDataString ? JSON.parse(existingUserDataString) : [];
+                    const existingUserData = existingUserDataString ? JSON.parse(existingUserDataString) : [];
 
-    // Add the new user to the array
-    existingUserData.push(newUser);
+                    existingUserData.push(newUser);
 
-    // Convert the array to a string and store it in local storage
-    localStorage.setItem('userList', JSON.stringify(existingUserData));
+                    localStorage.setItem('userList', JSON.stringify(existingUserData));
 
-    // Optionally, you can display a message or perform other actions after storing the user
-    alert('User details stored successfully!');
+                    displayUserDetails(existingUserData);
 
-    // Clear the form or perform any other necessary actions
-    formName.reset();
-}
+                    alert('User details stored successfully!');
 
+                    formName.reset();
+               }
 
-          
+               function displayUserDetails(userList) {
+                    userDetailsContainer.innerHTML = '';
+
+                    userList.forEach((user, index) => {
+                         const userDiv = document.createElement('div');
+                         userDiv.classList.add('userContainer');
+                         userDiv.textContent = `Name: ${user.name}, Age: ${user.age}, City: ${user.city}`;
+
+                         const deleteButton = document.createElement('button');
+                         deleteButton.textContent = 'Delete';
+
+                         deleteButton.addEventListener('click', () => {
+                              deleteUser(index, userList);
+                         });
+
+                         userDiv.appendChild(deleteButton);
+                         userDetailsContainer.appendChild(userDiv);
+                    });
+               }
+
+               function deleteUser(index, userList) {
+                    userList.splice(index, 1);
+                    localStorage.setItem('userList', JSON.stringify(userList));
+                    displayUserDetails(userList);
+               }
+
+               // Initial display when the page loads
+               const initialUserDataString = localStorage.getItem('userList');
+               const initialUserData = initialUserDataString ? JSON.parse(initialUserDataString) : [];
+               displayUserDetails(initialUserData);
           </script>
      </body>
 </html>
