--- a/storeObject.html
+++ b/storeObject.html
@@ -1,97 +1,151 @@
 <!DOCTYPE html>
 <html>
-     <head>
-          <link rel="shortcut icon" href="#">
-          <style>
-               h1 {
-                    text-align: center;
-                    border: solid 3px grey;
-               }
-               #userDetails {
-                    margin-top: 20px;
-               }
-               .userContainer {
-                    margin-bottom: 10px;
-               }
-          </style>
-     </head>
-     <body>
-          <h1>Store, Display, and Delete User Details</h1>
-          <form id="myForm" autocomplete="off">
-               <label for="name">Name:</label>
-               <input type="text" id="name" name="name" required>
-               <label for="age">Age:</label>
-               <input type="number" id="age" name="age" required>
-               <label for="city">City:</label>
-               <input type="text" id="city" name="city" required>
-               <button type="submit">Submit</button>
-          </form>
-          <div id="userDetails"></div>
+<head>
+    <link rel="shortcut icon" href="#">
+    <style>
+        h1 {
+            text-align: center;
+            border: solid 3px grey;
+        }
+        #userDetails {
+            margin-top: 20px;
+        }
+        .userContainer {
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Store, Display, Edit, and Delete User Details</h1>
+    <form id="myForm" autocomplete="off">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="age">Age:</label>
+        <input type="number" id="age" name="age" required>
+        <label for="city">City:</label>
+        <input type="text" id="city" name="city" required>
+        <button type="submit">Submit</button>
+        <button type="button" id="editButton" style="display:none;">Edit User</button>
+        <button type="button" id="cancelEditButton" style="display:none;">Cancel Edit</button>
+    </form>
+    <div id="userDetails"></div>
 
-          <script>
-               const formName = document.getElementById('myForm');
-               const userDetailsContainer = document.getElementById('userDetails');
+    <script>
+        const formName = document.getElementById('myForm');
+        const userDetailsContainer = document.getElementById('userDetails');
+        const editButton = document.getElementById('editButton');
+        const cancelEditButton = document.getElementById('cancelEditButton');
+        let editingIndex = -1;
 
-               formName.addEventListener('submit', addUsers);
+        formName.addEventListener('submit', addOrUpdateUser);
+        editButton.addEventListener('click', editUser);
+        cancelEditButton.addEventListener('click', cancelEdit);
 
-               function addUsers(event) {
-                    event.preventDefault();
+        function addOrUpdateUser(event) {
+            event.preventDefault();
 
-                    const userName = event.target.elements.name.value;
-                    const userAge = event.target.elements.age.value;
-                    const userCity = event.target.elements.city.value;
+            const userName = event.target.elements.name.value;
+            const userAge = event.target.elements.age.value;
+            const userCity = event.target.elements.city.value;
 
-                    const newUser = {
-                         name: userName,
-                         age: userAge,
-                         city: userCity
-                    };
+            if (editingIndex === -1) {
+                // Add a new user
+                const newUser = { name: userName, age: userAge, city: userCity };
+                const existingUserData = getExistingUserData();
+                existingUserData.push(newUser);
+                localStorage.setItem('userList', JSON.stringify(existingUserData));
+            } else {
+                // Update an existing user
+                const existingUserData = getExistingUserData();
+                existingUserData[editingIndex].name = userName;
+                existingUserData[editingIndex].age = userAge;
+                existingUserData[editingIndex].city = userCity;
+                localStorage.setItem('userList', JSON.stringify(existingUserData));
+                editingIndex = -1; // Reset editing index after update
+                cancelEdit();
+            }
 
-                    const existingUserDataString = localStorage.getItem('userList');
+            displayUserDetails(getExistingUserData());
+            alert('User details stored successfully!');
+            formName.reset();
+        }
 
-                    const existingUserData = existingUserDataString ? JSON.parse(existingUserDataString) : [];
+        function displayUserDetails(userList) {
+            userDetailsContainer.innerHTML = '';
 
-                    existingUserData.push(newUser);
+            userList.forEach((user, index) => {
+                const userDiv = document.createElement('div');
+                userDiv.classList.add('userContainer');
+                userDiv.textContent = `Name: ${user.name}, Age: ${user.age}, City: ${user.city}`;
 
-                    localStorage.setItem('userList', JSON.stringify(existingUserData));
+                const editButton = document.createElement('button');
+                editButton.textContent = 'Edit';
+                editButton.addEventListener('click', () => {
+                    startEdit(index, userList);
+                });
 
-                    displayUserDetails(existingUserData);
+                const deleteButton = document.createElement('button');
+                deleteButton.textContent = 'Delete';
+                deleteButton.addEventListener('click', () => {
+                    deleteUser(index, userList);
+                });
 
-                    alert('User details stored successfully!');
+                userDiv.appendChild(editButton);
+                userDiv.appendChild(deleteButton);
+                userDetailsContainer.appendChild(userDiv);
+            });
+        }
 
-                    formName.reset();
-               }
+        function startEdit(index, userList) {
+            const userToEdit = userList[index];
+            formName.elements.name.value = userToEdit.name;
+            formName.elements.age.value = userToEdit.age;
+            formName.elements.city.value = userToEdit.city;
 
-               function displayUserDetails(userList) {
-                    userDetailsContainer.innerHTML = '';
+            editButton.style.display = 'none';
+            cancelEditButton.style.display = 'inline-block';
+            editingIndex = index;
+        }
 
-                    userList.forEach((user, index) => {
-                         const userDiv = document.createElement('div');
-                         userDiv.classList.add('userContainer');
-                         userDiv.textContent = `Name: ${user.name}, Age: ${user.age}, City: ${user.city}`;
+        function editUser() {
+            // This function is called when the "Edit User" button is clicked
+            // It allows the user to modify the form fields
+            formName.elements.name.disabled = false;
+            formName.elements.age.disabled = false;
+            formName.elements.city.disabled = false;
 
-                         const deleteButton = document.createElement('button');
-                         deleteButton.textContent = 'Delete';
+            editButton.style.display = 'none';
+            cancelEditButton.style.display = 'inline-block';
+        }
 
-                         deleteButton.addEventListener('click', () => {
-                              deleteUser(index, userList);
-                         });
+        function cancelEdit() {
+            // This function is called when the "Cancel Edit" button is clicked
+            // It resets the form fields to their original state
+            formName.reset();
+            formName.elements.name.disabled = false;
+            formName.elements.age.disabled = false;
+            formName.elements.city.disabled = false;
 
-                         userDiv.appendChild(deleteButton);
-                         userDetailsContainer.appendChild(userDiv);
-                    });
-               }
+            editButton.style.display = 'inline-block';
+            cancelEditButton.style.display = 'none';
 
-               function deleteUser(index, userList) {
-                    userList.splice(index, 1);
-                    localStorage.setItem('userList', JSON.stringify(userList));
-                    displayUserDetails(userList);
-               }
+            editingIndex = -1; // Reset editing index
+        }
 
-               // Initial display when the page loads
-               const initialUserDataString = localStorage.getItem('userList');
-               const initialUserData = initialUserDataString ? JSON.parse(initialUserDataString) : [];
-               displayUserDetails(initialUserData);
-          </script>
-     </body>
+        function deleteUser(index, userList) {
+            userList.splice(index, 1);
+            localStorage.setItem('userList', JSON.stringify(userList));
+            displayUserDetails(userList);
+        }
+
+        function getExistingUserData() {
+            const existingUserDataString = localStorage.getItem('userList');
+            return existingUserDataString ? JSON.parse(existingUserDataString) : [];
+        }
+
+        // Initial display when the page loads
+        const initialUserData = getExistingUserData();
+        displayUserDetails(initialUserData);
+    </script>
+</body>
 </html>
